--- a/src/styles/sections/hero.scss
+++ b/src/styles/sections/hero.scss
@@ -8,7 +8,9 @@
   align-items: start;
   justify-content: flex-end;
   padding-bottom: $space-8;
-  background-position: left;
+  background-position: 0% 100%;
+  background-size: 250%;
+  background-origin: border-box;
 
   > * {
     z-index: 10;
@@ -19,12 +21,16 @@
     z-index: 0;
     position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
-    background-color: rgba(0, 0, 0, 0.2);
-    transition: background-color 200ms;
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: background 200ms;
     
     @media screen and (min-width: 768px) {
       background-color: rgba(0, 0, 0, 0);
     }
+  }
+
+  @media screen and (min-width: 400px) {
+    background-size: cover;
   }
   
   @media screen and (min-width: 768px) {
